Algoritmo cruce medias automatizado

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -698,3 +698,19 @@ journal = {Neural Comput.},
   	howpublished = {\url{https://quantdemy.com/metodo-walk-forward/}},
   	note = {Online; Accedido el 23-May-2024},
 }
+
+@misc{ wiki:buy_and_hold,
+  	author = {Wikipedia},
+  	title = {\emph{Buy and hold}},
+  	year = {2024},
+  	howpublished = {\url{https://en.wikipedia.org/wiki/Buy_and_hold}},
+  	note = {Online; Accedido el 24-May-2024},
+}
+
+@misc{ wiki:market_cap,
+  	author = {Wikipedia},
+  	title = {\emph{Capitalización de mercado}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Capitalizaci%C3%B3n_de_mercado}},
+  	note = {Online; Accedido el 24-May-2024},
+}
